{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 29,
  "lineage": "95b4faa8-4f58-ad67-b439-adab09d44aef",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-08-14T07:18:57.520-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "web-firewall",
            "name": "web-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-248910/global/networks/default",
            "priority": 1000,
            "project": "devops-248910",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-248910/global/firewalls/web-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "mweb"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306",
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-08-14T07:18:57.484-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "ssh-firewall",
            "name": "ssh-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-248910/global/networks/default",
            "priority": 1000,
            "project": "devops-248910",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-248910/global/firewalls/ssh-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "mdb",
              "mweb"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mdb",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20190729",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/devops-248910/zones/europe-west3-a/disks/mdb"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "id": "mdb",
            "instance_id": "1047837156170114748",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "yarko:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCtmSPYZ/oGytsKZ0aaA9oUa1z6wToobufB8qAkIE0ceftWRjRGO/1E+22OmPij5bKkcniEmCFITsrxP7r83+FdDc0w1xCdOOtpeJMzymDaYR6+l55WXH7dFzOqOC/iBXLMteViiaKf2eaGBHtvahZocw2AYzruH3ZFUclGrERoL5d4Mb4mq7gSUWO4QqwsP/vGnn4NSyCodgIHhxKUq1ixlbScqxhmzpqwz60JcrNLzPmP+IzkjhLe+RG4rg2LEFLUXuFzNRmBetkhaUiu0xVf2BCRyIO3XtNV1t8JqbaB1YcbfntmewY2pFGmiAWgN1uwnSEM8RB+qQcK4H5nlnEH yaroslav@yaroslav-X441SC\n"
            },
            "metadata_fingerprint": "WSUAq_yPG7A=",
            "name": "mdb",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.246.204.122",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devops-248910/global/networks/default",
                "network_ip": "10.156.0.12",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devops-248910/regions/europe-west3/subnetworks/default",
                "subnetwork_project": "devops-248910"
              }
            ],
            "project": "devops-248910",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-248910/zones/europe-west3-a/instances/mdb",
            "tags": [
              "mdb"
            ],
            "tags_fingerprint": "bpND4bTXdkU=",
            "zone": "europe-west3-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mweb",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20190729",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/devops-248910/zones/europe-west3-a/disks/mweb"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "id": "mweb",
            "instance_id": "6927509743577179836",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "yarko:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCtmSPYZ/oGytsKZ0aaA9oUa1z6wToobufB8qAkIE0ceftWRjRGO/1E+22OmPij5bKkcniEmCFITsrxP7r83+FdDc0w1xCdOOtpeJMzymDaYR6+l55WXH7dFzOqOC/iBXLMteViiaKf2eaGBHtvahZocw2AYzruH3ZFUclGrERoL5d4Mb4mq7gSUWO4QqwsP/vGnn4NSyCodgIHhxKUq1ixlbScqxhmzpqwz60JcrNLzPmP+IzkjhLe+RG4rg2LEFLUXuFzNRmBetkhaUiu0xVf2BCRyIO3XtNV1t8JqbaB1YcbfntmewY2pFGmiAWgN1uwnSEM8RB+qQcK4H5nlnEH yaroslav@yaroslav-X441SC\n"
            },
            "metadata_fingerprint": "WSUAq_yPG7A=",
            "name": "mweb",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.198.85.114",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devops-248910/global/networks/default",
                "network_ip": "10.156.0.11",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devops-248910/regions/europe-west3/subnetworks/default",
                "subnetwork_project": "devops-248910"
              }
            ],
            "project": "devops-248910",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-248910/zones/europe-west3-a/instances/mweb",
            "tags": [
              "mweb"
            ],
            "tags_fingerprint": "p8m8-u7pODY=",
            "zone": "europe-west3-a"
          }
        }
      ]
    }
  ]
}